Fix blog alignment

--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -1,11 +1,11 @@
 * {
-  text-align: center;
   background: #EFEFEF;
 }
 
 .title {
   font-family: Verdana, Arial, sans-serif;
   font-size: 2.25em;
+  text-align: center;
 
 
 }
@@ -13,6 +13,7 @@
 .subtitle {
   font-family: Verdana, Arial, sans-serif;
   font-size: 1.75em;
+  text-align: center;
 
 }
 
@@ -29,6 +30,7 @@
 .date {
   font-family: sans-serif;
   font-size: 1em;
+  text-align: center;
 }
 
 
